--- a/style.css
+++ b/style.css
@@ -56,9 +56,8 @@ border: 2px solid;
 .container-titulo{
 font-size: 28px;
 font-weight: 700;
-
-
 }
+
 .container-imagem{
     margin: 1em 0 2em 0;
 }
@@ -72,8 +71,7 @@ margin: 0 6 em;
 }
 
 .secundario-imagem{
-width: 60%;
-
+width: 80%;
 }
 
 .descrição-titulo{
@@ -81,7 +79,6 @@ font-weight: 700;
 font-size: 48px;
 color: var(--branco-principal);
 margin-bottom: 0.1em;
-
 }
 
 .descriçao-texto{
@@ -89,5 +86,16 @@ margin-bottom: 0.1em;
 }
 
 .secundario{
-    align-items: 0 10em;
+    align-items: center;
+    margin:0 10em;
+}
+
+.secundario-botao{
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container-descrição{
+padding: 2em;
+
 }
