--- a/style.css
+++ b/style.css
@@ -97,5 +97,44 @@ margin-bottom: 0.1em;
 
 .container-descrição{
 padding: 2em;
-
 }
+
+.dispositivo__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivos__titulos{
+font-size: 48px;
+color: var(--branco-principal);
+}
+
+.lista__item{
+font-size: 32px;
+color: var(--branco-principal);
+}
+
+.rodapé{
+text-align: center;
+margin: 5em 3em;
+}
+
+.rodapé__lista{
+display: flex;
+justify-content: center;
+list-style-type: none;
+margin-top: 1em;
+}
+
+.rodapé__texto{
+margin: 1em 0;
+color: var(--cinza-secundario);
+font-size: 14px;
+}
+
